--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,5 +8,6 @@
         android:title="@string/app_bar_search_title"
         android:orderInCategory="1"
         app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.widget.SearchView"
         />
 </menu>
